# CMakeList.txt : CMake project for Week2, include source and define
# project specific logic here.
#

# Add source to this project's executable.
add_executable (JeanLuc_Lab2 Week2.cpp Vehicle.cpp GasolineVehicle.cpp HybridVehicle.cpp ElectricVehicle.cpp)


# TODO: Add tests and install targets if needed.
